--- a/assignment3/cruises.html
+++ b/assignment3/cruises.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cruises - Travel Deals</title>
-  <link rel="stylesheet" href="../mystyle.css">
+  <link rel="stylesheet" href="mystyle.css">
   <script defer src="js/common.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script defer src="js/cruises.js"></script>
@@ -33,14 +33,16 @@
         </select>
       </div>
     </div>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="stays.html">Stays</a>
-      <a href="flights.html">Flights</a>
-      <a href="cars.html">Cars</a>
-      <a href="cruises.html" aria-current="page">Cruises</a>
-      <a href="contact.html">Contact Us</a>
-      <a href="cart.html">Cart</a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="stays.html">Stays</a></li>
+        <li><a href="flights.html">Flights</a></li>
+        <li><a href="cars.html">Cars</a></li>
+        <li><a class="active" href="cruises.html" aria-current="page">Cruises</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="cart.html">Cart</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -93,8 +95,7 @@
 
   <footer>
     <p>&copy; 2025 Travel Deals</p>
-    <p>Student: Henry Vu (NETID: ddv240000), Section: 001</p>
-    <p>Partner: Chacko Happy (NETID: ckh240000)</p>
+    <p>Henry Vu (NETID: ddv240000), Chacko Happy (NETID: ckh240000), Section: 001</p>
   </footer>
 </body>
 </html>
