--- a/assignment3/cart.html
+++ b/assignment3/cart.html
@@ -60,6 +60,10 @@
     <div class="mb-2">
       <button id="bookCarsBtn" class="btn btn-amber">Book Cars</button>
     </div>
+    <section id="cartCruises"></section>
+    <div class="mb-2">
+      <button id="bookCruisesBtn" class="btn btn-green">Book Cruises</button>
+    </div>
     <section id="cartTotals" style="margin-top: 12px;"></section>
     <section id="bookingOutput" class="mt-2"></section>
   </main>
