--- a/assignment3/cruises.html
+++ b/assignment3/cruises.html
@@ -91,6 +91,7 @@
       <button type="submit">Submit</button>
     </form>
     <section id="cruisesSummary" style="margin-top: 12px;"></section>
+    <section id="cruiseResults" style="margin-top: 12px;"></section>
   </main>
 
   <footer>
